# airbot_hyjoe_ws

./: .gitignore  README.md
rviz/: sensor.rviz
src/A1_keepout/: CMakeLists.txt  README.md  package.xml
src/A1_keepout/include/A1_keepout/: A1_keepout.hpp
src/A1_keepout/json/: area.json
src/A1_keepout/launch/: keepout.launch.py
src/A1_keepout/scripts/: areaPublish.py  wallPublish.py
src/A1_keepout/src/: A1_keepout.cpp  main.cpp
src/A1_maneuver/: CMakeLists.txt  README.md  package.xml
src/A1_maneuver/include/: maneuver.hpp  motor_status.hpp  states.hpp
src/A1_maneuver/launch/: A1_maneuver.launch.py
src/A1_maneuver/src/: main.cpp  maneuver.cpp
src/A1_path_planner/: .clang-format  A1_path_planner.xml  CMakeLists.txt  README.md  package.xml
src/A1_path_planner/include/A1_path_planner/: path_planner.hpp  theta_star.hpp
src/A1_path_planner/src/: path_planner.cpp  theta_star.cpp
src/A1_path_planner/test/: test_theta_star.cpp
src/A1_perception/: .clang-format  CMakeLists.txt  package.xml
src/A1_perception/docs/: architecture.mdj
src/A1_perception/include/: climb_checker.hpp  layer.hpp  motor_status.hpp  perception_node.hpp  position.hpp
src/A1_perception/include/filter/: filter.hpp  filter_factory.hpp
src/A1_perception/launch/: A1_perception.launch.py
src/A1_perception/params/: node.yaml  node_5.yaml  node_5idx.yaml  node_5idx_back.yaml  node_8x8 copy.yaml  node_8x8.yaml  node_devide.yaml  node_devide_1d.yaml  node_devide_all.yaml  node_devide_camera.yaml  node_devide_drop_off.yaml  node_devide_mtof.yaml  node_test_param.yaml  params.yaml
src/A1_perception/src/: climb_checker.cpp  main.cpp  perception_node.cpp
src/A1_perception/src/filter/: filter.cpp  filter_factory.cpp
src/A1_perception/test/: test_filter.cpp  test_main.cpp
src/airbot_ai_interface/: CMakeLists.txt  package.xml
src/airbot_ai_interface/launch/: airbot_ai_interface_launch.py
src/airbot_ai_interface/src/: ai_interface.cpp
src/airbot_error_manager/: CMakeLists.txt  package.xml
src/airbot_error_manager/config/: error_list.yaml  params.yaml
src/airbot_error_manager/include/error_manager/: error_manager.h  error_manager.hpp  error_manager_node.hpp
src/airbot_error_manager/include/error_monitor/: error_monitor.hpp  error_monitor_interface.hpp  error_monitor_node.hpp
src/airbot_error_manager/launch/: error_manager.launch.py
src/airbot_error_manager/src/: node.cpp
src/airbot_error_manager/src/error_manager/: error_manager.cpp  error_manager_node.cpp  main.cpp  node.cpp
src/airbot_error_manager/src/error_monitor/: error_monitor.cpp  error_monitor_node.cpp  main.cpp  node.cpp
src/airbot_log/: CMakeLists.txt  package.xml
src/airbot_log/src/: airbot_logging.cpp  logging_amr.cpp
src/airbot_motion_anomaly_detector/: CMakeLists.txt  package.xml
src/airbot_motion_anomaly_detector/config/: collision_params.yaml
src/airbot_motion_anomaly_detector/include/airbot_motion_anomaly_detector/: anomaly_detector.hpp  odom_monitor.hpp
src/airbot_motion_anomaly_detector/launch/: anomaly_detector.launch.py
src/airbot_motion_anomaly_detector/src/: anomaly_detector.cpp  odom_monitor.cpp
src/airbot_node_manager/: CMakeLists.txt  package.xml
src/airbot_node_manager/include/node_manager/: node_manager.hpp
src/airbot_node_manager/launch/: node_manager.launch.py
src/airbot_node_manager/src/: node.cpp
src/airbot_node_manager/src/node_manager/: node_manager.cpp
src/airbot_sensor_manager/: CMakeLists.txt  package.xml
src/airbot_sensor_manager/config/: sensor_to_pointcloud_param.yaml
src/airbot_sensor_manager/include/airbot_sensor_to_pointcloud/: sensor_to_pointcloud.hpp  sensor_to_pointcloud_node.hpp
src/airbot_sensor_manager/include/logger/: camera_object_logger.hpp
src/airbot_sensor_manager/include/sensor_interface/: sensor_interface_node.hpp
src/airbot_sensor_manager/include/utils/: boundingbox_generator.hpp  common_struct.hpp  frame_converter.hpp  pointcloud_generator.hpp
src/airbot_sensor_manager/launch/: param_setter.launch.py  sensor_manager.launch.py  sensor_to_pointcloud.launch.py
src/airbot_sensor_manager/src/: node.cpp
src/airbot_sensor_manager/src/airbot_sensor_to_pointcloud/: main.cpp  node.cpp  sensor_to_pointcloud.cpp  sensor_to_pointcloud_node.cpp
src/airbot_sensor_manager/src/dynamic_param_setter/: node.cpp  param_setter.cpp  param_setter_node.cpp
src/airbot_sensor_manager/src/logger/: camera_object_logger.cpp
src/airbot_sensor_manager/src/sensor_interface/: sensor_interface_node.cpp
src/airbot_sensor_manager/src/utils/: boundingbox_generator.cpp  frame_converter.cpp  pointcloud_generator.cpp
src/airbot_sensor_manager/test/: test_frame_changer.cpp
src/log_manager/: CMakeLists.txt  package.xml
src/log_manager/launch/: log_manager_launch.py
src/log_manager/src/: log_manager.cpp
src/obstacle/: CMakeLists.txt  package.xml
src/obstacle/launch/: obstacle.launch.py  sensor_to_pointcloud.launch.py
src/obstacle/src/: node.cpp
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/launch/: bringup.launch.py  state_publisher.launch.py
src/robot_bringup/msg/: BatteryStatus.msg
src/robot_bringup/src/: uart_communication.cpp  uart_helpers.cpp
src/robot_bringup/urdf/: robot.urdf
src/state_manager/: CMakeLists.txt  package.xml
src/state_manager/config/: params.yaml
src/state_manager/launch/: state_manager.launch.py
src/state_manager/src/: node.cpp  state_manager.cpp
src/udp_interface/: CMakeLists.txt  package.xml
src/udp_interface/launch/: config.ini  udp_interface.launch.py
src/udp_interface/src/: main.cpp  udp_communication.cpp
src/wm_explore/explore/: CMakeLists.txt  package.xml
src/wm_explore/explore_msgs/: CMakeLists.txt  package.xml
src/wm_explore/node_list_publisher/: CMakeLists.txt  package.xml
src/wm_explore/warmup_server/: CMakeLists.txt  package.xml
src/wm_explore/wm_nav_launch/: CMakeLists.txt  README.md  package.xml
src/wm_logger/: CMakeLists.txt  package.xml
src/wm_logger/config/: wm_logger.yaml
src/wm_logger/launch/: wm_logger.launch.py
src/wm_logger/src/: main.cpp
(+319 files in other folders)
