<?xml version="1.0"?>
<package format="3">
  <name>A1_perception</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tfkang92@gmail.com"></maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>robot_custom_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <!-- <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend> -->

  <exec_depend>launch</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>robot_custom_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
