<?xml version="1.0"?>
<package format="3">
  <name>airbot_motion_anomaly_detector</name>
  <version>0.1.0</version>
  <description>ROS 2 Motion Anomaly Detector for Airbot</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>robot_custom_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
