<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>state_manager</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="airbot@airbot.com">airbot</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <!-- <build_depend>robot_custom_msgs</build_depend> -->
  <build_depend>nav2_msgs</build_depend>
  
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <!-- <exec_depend>robot_custom_msgs</exec_depend> -->
  <exec_depend>nav2_msgs</exec_depend>
  <depend>robot_custom_msgs</depend>
  <!-- <exec_depend>robot_bringup</exec_depend>
  <exec_depend>udp_interface</exec_depend> -->

  <!-- <depend>robot_bringup</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
